// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Magento2/> Detail should render a detail view 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Apps & integrations
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Magento 2
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/magento2/"
    >
      App Details
    </a>
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/magento2/connections"
    >
      Connections
    </a>
  </nav>
  <header
    class="hero"
  >
    <img
      alt="Magento 2's logo"
      class="heroImage"
      src="/static/private/js/assets/img/integrations/magento.png"
    />
    <div>
      <h1
        class="heroHeading"
      >
        Magento 2
      </h1>
      <p
        class="heroDescription"
      >
        Display customer profiles & orders next to tickets. Edit orders with macros.
      </p>
      <div
        class="heroMeta"
      >
        <span
          class="badge badge badge-secondary badge-pill"
        >
          ECOMMERCE
        </span>
        <span
          class="by"
        >
          by
           
          <a
            href="https://www.gorgias.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Gorgias
          </a>
        </span>
      </div>
    </div>
  </header>
  <main
    class="main"
  >
    <section
      class="longDescription"
    >
      <h2
        class="categoryTitle"
      >
        About
      </h2>
      <div>
        <p>
          Securely connect with Magento to have your customers’ order history at your agents’ fingertips.
          <br />
          Magento is an ecommerce platform built on open source technology which provides online merchants with a flexible shopping cart system, as well as control over the look, content and functionality of their online store.
        </p>
        <p>
          The Gorgias plugin for Magento is currently compatible with 
          <strong>
            Magento 2.2
          </strong>
          , 
          <strong>
            2.3
          </strong>
           and 
          <strong>
            2.4
          </strong>
           for all Magento versions:
        </p>
        <ul>
          <li>
            Open Source (CE);
          </li>
          <li>
            Commerce using on prem (EE);
          </li>
          <li>
            Commerce on Cloud (ECE).
          </li>
        </ul>
        <h5
          class="mt-4"
        >
          Integration benefits
        </h5>
        <ul>
          <li>
            Display customer profiles next to tickets;
          </li>
          <li>
            Display orders, shipments and credit memos;
          </li>
          <li>
            Insert Magento 2 variables in macros;
          </li>
          <li>
            Use Magento 2 variables as filters in rules.
          </li>
        </ul>
      </div>
      <ul
        class="screenshotList"
      >
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 1 of things this app allows you to do in Gorgias"
            class="screenshot"
            src="/static/private/js/assets/img/integrations/screenshots/magento-1.png"
          />
        </li>
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 2 of things this app allows you to do in Gorgias"
            class="screenshot"
            src="/static/private/js/assets/img/integrations/screenshots/magento-2.png"
          />
        </li>
        <li
          class="screenshotListItem"
        >
          <img
            alt="Screenshot number 3 of things this app allows you to do in Gorgias"
            class="screenshot"
            src="/static/private/js/assets/img/integrations/screenshots/magento-3.png"
          />
        </li>
      </ul>
    </section>
    <div
      class="infoCard card"
    >
      <div
        class="card-body"
      >
        <div
          class="connectWrapper"
        >
          <a
            class="connectButtonWrapper"
            to="/app/settings/integrations/magento2/new"
          >
            <button
              class="wrapper actionButton fill primary medium"
              type="button"
            >
              Connect App
            </button>
          </a>
        </div>
        <h2
          class="categoryTitle cardTitle"
        >
          Pricing
        </h2>
        <ul
          class="cardList"
        >
          <li>
            Free
          </li>
          <li>
            <a
              class="actionLink"
              href="https://business.adobe.com/products/magento/pricing.html"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                attach_money
              </i>
              See pricing details
            </a>
          </li>
        </ul>
        <h2
          class="categoryTitle cardTitle"
        >
          Resources
        </h2>
        <ul
          class="cardList"
        >
          <li>
            <a
              class="actionLink"
              href="https://docs.gorgias.com/ecommerce-integrations/magento-2"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                description
              </i>
              Documentation
            </a>
          </li>
          <li>
            <a
              class="actionLink"
              href="https://magento.com/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <i
                class="material-icons-outlined actionIcon actionIconBigger"
              >
                privacy_tip
              </i>
              Privacy Policy
            </a>
          </li>
        </ul>
      </div>
    </div>
  </main>
</div>
`;

exports[`<Magento2/> Integration should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Apps & integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/magento2/connections"
          >
            Magento 2
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        />
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <div
          class="alert loading mb-4"
        >
          <div
            class="iconContainer"
          >
            <span
              class="loadingIcon"
            >
              <svg
                class="spinner dark"
                preserveAspectRatio="xMidYMid meet"
                role="status"
                viewBox="0 0 20 20"
                width="100%"
              >
                <circle
                  class="dot"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <circle
                  class="circle"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <span
                  class="sr-only"
                >
                  Loading...
                </span>
              </svg>
            </span>
          </div>
          <div
            class="content"
          >
            <span
              class="label"
            >
              Import in progress. We typically sync 3,000 customers an hour. We will send you an email once it is done. Feel free to leave this page.
            </span>
          </div>
        </div>
        <form
          class=""
        >
          <label
            class="label mb-2"
            for="store-field"
          >
            Store admin URL
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <span
            class="mb-4 wrapper group horizontal"
          >
            <span
              class="groupAddon left"
            >
              https:///
            </span>
            <div
              class="wrapper right isNested"
            >
              <input
                class="input"
                id="store-field"
                name="admin-url-suffix"
                placeholder="ex: admin_45f1c"
                required=""
                type="text"
                value=""
              />
            </div>
          </span>
          <div>
            <button
              class="wrapper mr-2 fill primary medium isDisabled"
              disabled=""
              type="submit"
            >
              Update Connection
            </button>
            <button
              class="wrapper float-right fill destructive medium"
              id="delete-integration"
              type="button"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete App
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Magento2/> List should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Apps & integrations
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Magento 2
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/magento2/"
    >
      App Details
    </a>
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/magento2/connections"
    >
      Connections
    </a>
  </nav>
  <ul
    class="list"
  >
    <li
      class="listItem"
    >
      <a
        class="link"
        to="/app/settings/integrations/magento2/1"
      >
        <span>
          myShop1
        </span>
        <i
          class="material-icons md-3"
        >
          keyboard_arrow_right
        </i>
      </a>
    </li>
  </ul>
  <div
    class="wrapper"
  >
    <a
      class="connectButtonWrapper"
      to="/app/settings/integrations/magento2/new"
    >
      <button
        class="wrapper actionButton fill primary medium"
        type="button"
      >
        <span
          class="wrapper"
        >
          <i
            class="material-icons icon isLeft medium"
          >
            add
          </i>
          Connect Magento2
        </span>
      </button>
    </a>
  </div>
</div>
`;

exports[`<Magento2/> New should render 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Apps & integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/magento2/connections"
          >
            Magento 2
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Connect app
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col-md-8"
      >
        <h2
          class="stepTitle"
        >
          Step 1
        </h2>
        <p>
          Follow
           
          <a
            href="https://docs.gorgias.com/en-US/magento-2-81817"
            rel="noopener noreferrer"
            target="_blank"
          >
            these instructions
          </a>
           
          to install Gorgias extension to your Magento 2 store.
          <br />
          Make sure to complete this step, or else the connection will not work.
        </p>
        <h2
          class="stepTitle"
        >
          Step 2
        </h2>
        <label
          class="label"
        >
          How do you want to connect this app?
          <abbr
            aria-label="required"
            class="abbr"
            title="required"
          >
            *
          </abbr>
        </label>
        <div
          class="selectionButtonGroup"
        >
          <div
            aria-checked="true"
            aria-label="Connect in 1 click"
            class="wrapper selected selectionButton"
            role="radio"
            tabindex="0"
          >
            <div>
              <label
                class="label label"
                for="oneStepConnect"
              >
                <input
                  checked=""
                  class="input"
                  id="oneStepConnect"
                  tabindex="-1"
                  type="radio"
                />
                Connect in 1 click
              </label>
            </div>
          </div>
          <div
            aria-checked="false"
            aria-label="Connect manually"
            class="wrapper selectionButton"
            id="magento-manual-connect3"
            role="radio"
            tabindex="0"
          >
            <div>
              <label
                class="label label"
                for="manualConnect"
              >
                <input
                  class="input"
                  id="manualConnect"
                  tabindex="-1"
                  type="radio"
                />
                Connect manually
              </label>
            </div>
          </div>
        </div>
        <form
          class=""
        >
          <label
            class="label mb-2"
            for="store-field"
          >
            Store admin URL
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <span
            class="mb-4 wrapper group horizontal"
          >
            <span
              class="groupAddon left"
            >
              https://
            </span>
            <div
              class="wrapper right isNested"
            >
              <input
                class="input"
                id="store-field"
                name="admin-url"
                pattern="^[a-z.0-9-]*\\\\.[a-z0-9]*\\\\/(index\\\\.php)?[\\\\/\\\\w\\\\d_-]*$"
                placeholder="ex: acme.com/admin_45f1c"
                required=""
                type="text"
                value=""
              />
            </div>
          </span>
          <div>
            <button
              class="wrapper mr-2 fill primary medium isDisabled"
              disabled=""
              type="submit"
            >
              Connect App
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
